--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-firestore": "^1.0.1",
+    "react-google-button": "^0.7.1",
     "react-query": "^2.23.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
