--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.15.2",
     "firebase": "^7.22.1",
     "material-ui-dropzone": "^3.5.0",
     "react": "^16.13.1",
